force-app/main/default/objects/ServiceAppointment/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <formula>IF( NOT( ISBLANK(  TEXT(AppointmentType) ) ) ,  TEXT(AppointmentType) , &apos;&apos;)</formula>
    <label>Appointment Type</label>
    <type>Text</type>
</CustomField>