force-app/main/default/objects/ServiceAppointment/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <formula>IF( NOT( ISBLANK(  RS_Case__r.CaseNumber) ) ,  RS_Case__r.CaseNumber, &apos;&apos;)</formula>
    <label>Case</label>
    <type>Text</type>
</CustomField>