force-app/main/default/objects/ServiceAppointment/fields/RS_Appointment_Missed__c.field-meta.xml
<CustomField>
    <fullName>RS_Appointment_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Scheduled Appointment is Missed</inlineHelpText>
    <label>Appointment Missed</label>
    <type>Checkbox</type>
</CustomField>