force-app/main/default/objects/ServiceAppointment/fields/RS_Appointment_Time_Passed__c.field-meta.xml
<CustomField>
    <fullName>RS_Appointment_Time_Passed__c</fullName>
    <formula>IF((SchedEndTime &lt; NOW()),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Time Passed</label>
    <type>Checkbox</type>
</CustomField>