force-app/main/default/objects/ServiceAppointment/fields/RS_CaseIssueType__c.field-meta.xml
<CustomField>
    <fullName>RS_CaseIssueType__c</fullName>
    <formula>IF( NOT( ISBLANK( TEXT(RS_Case__r.Type)) ) , TEXT(RS_Case__r.Type), &apos;&apos;)</formula>
    <label>CaseIssueType</label>
    <type>Text</type>
</CustomField>