force-app/main/default/objects/ServiceAppointment/fields/RS_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Customer_Name__c</fullName>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>