force-app/main/default/objects/ServiceAppointment/fields/RS_ObjectFormula__c.field-meta.xml
<CustomField>
    <fullName>RS_ObjectFormula__c</fullName>
    <formula>if(  RS_Case__r.Id &lt;&gt;&apos;&apos;,&quot;/&quot; + RS_Case__r.Id ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ObjectFormula</label>
    <type>Text</type>
</CustomField>