force-app/main/default/objects/ServiceAppointment/fields/RS_Reason_For_Missed_Appointment__c.field-meta.xml
<CustomField>
    <fullName>RS_Reason_For_Missed_Appointment__c</fullName>
    <label>Reason For Missed Appointment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>