force-app/main/default/objects/ServiceAppointment/fields/RS_Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RS_Scheduled_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(SchedStartTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>