force-app/main/default/objects/ServiceAppointment/fields/RS_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>RS_Start_Time__c</fullName>
    <formula>TEXT(DATEVALUE(SchedStartTime)) + &apos; &apos; +TRIM( LEFT( TEXT((TIMEVALUE(SchedStartTime)-18000000)) , FIND( &quot;.&quot;, TEXT(TIMEVALUE(SchedStartTime))) -1 ) )</formula>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>