force-app/main/default/objects/ServiceAppointment/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <formula>IF( NOT( ISBLANK( WorkType.Name ) ) , WorkType.Name , &apos;&apos;)</formula>
    <label>WorkType</label>
    <type>Text</type>
</CustomField>